--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>Is Tom up to date with Campaign 3?</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <style>
         body {
