--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+no<html>
 <head>
     <title>Is Tom up to date with Campaign 3?</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -36,7 +36,7 @@
 
     <div>
         <h1>No.</h1>
-        <p>Tom is currently at <code>27:48:11 / 04:18:34</code> in <code title="Campaign 3, Episode 54">C3E54</code></p>
+        <p>Tom is currently at <code>00:46:53 / 04:18:34</code> in <code title="Campaign 3, Episode 54">C3E54</code></p>
     </div>
 
 </body>
