--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ no<html>
 <body>
 
     <div>
-        <h1>No.</h1>
-        <p>Tom is currently at <code>02:10:27 / 03:35:16</code> in <code title="Campaign 3, Episode 55">C3E55</code></p>
+        <h1>Yes!!!</h1>
+        <p>Tom is currently at <code>03:35:16 / 03:35:16</code> in <code title="Campaign 3, Episode 55">C3E55</code></p>
     </div>
 
 </body>
