--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ no<html>
 <body>
 
     <div>
-        <h1>Yes!!!</h1>
+        <h1>Yes!</h1>
         <p>Tom is currently at <code>03:35:16 / 03:35:16</code> in <code title="Campaign 3, Episode 55">C3E55</code></p>
     </div>
 
