--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ no<html>
 <body>
 
     <div>
-        <h1>No.</h1>
-        <p>Tom is currently at <code>02:15:00 / 04:39:29</code> in <code title="Campaign 3, Episode 56">C3E56</code></p>
+        <h1>Yes!</h1>
+        <p>Tom is currently at <code>04:39:29 / 04:39:29</code> in <code title="Campaign 3, Episode 56">C3E56</code></p>
     </div>
 
 </body>
